add variables and typography

--- a/src/scss/01-abstracts/_variables.scss
+++ b/src/scss/01-abstracts/_variables.scss
@@ -4,3 +4,9 @@ $md: 640px;
 $md-lg: 960px;
 $lg: 1024px;
 $x-lg: 1440px;
+
+// Colors
+$pink: hsl(322, 100%, 66%);
+$veryPaleCyan: hsl(193, 100%, 96%);
+$veryDarkCyan: hsl(192, 100%, 9%);
+$grayishBlue: hsl(208, 11%, 55%);
