--- a/src/scss/02-base/_typography.scss
+++ b/src/scss/02-base/_typography.scss
@@ -1,1 +1,18 @@
 @use "./../01-abstracts/" as *;
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&family=Poppins:wght@600&display=swap");
+
+body {
+  font-family: "Open Sans", sans-serif;
+  font-weight: 400;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 600;
+}
+
+button {
+  font-weight: 700;
+}
