--- a/src/scss/02-base/_typography.scss
+++ b/src/scss/02-base/_typography.scss
@@ -4,6 +4,7 @@
 body {
   font-family: "Open Sans", sans-serif;
   font-weight: 400;
+  color: $veryDarkCyan;
 }
 
 h1,
@@ -15,4 +16,5 @@ h3 {
 
 button {
   font-weight: 700;
+  color: $veryDarkCyan;
 }
