--- a/src/scss/02-base/_base.scss
+++ b/src/scss/02-base/_base.scss
@@ -1,3 +1,6 @@
 @use "./../01-abstracts/" as *;
 
-// Use this file to write styles on element selectors
+a {
+  text-decoration: none;
+  color: inherit;
+}
