--- a/src/scss/04-globals/_footer.scss
+++ b/src/scss/04-globals/_footer.scss
@@ -3,32 +3,37 @@
 .footer {
   color: white;
   padding: 139px 21px 46px 16px;
+    font-size: rem(14px);
 
   &__logo {
     max-width: 167px;
     margin-bottom: 25px;
   }
 
-  .info {
+  &__info {
     display: flex;
     flex-direction: column;
     gap: 24px;
     margin-bottom: 41px;
+  }
 
-    &__li {
-      display: grid;
-      grid-template-columns: 24px 1fr;
-      gap: 16px;
-      font-size: rem(14px);
-      line-height: 1.71;
-    }
+  &__info-li {
+    display: grid;
+    grid-template-columns: 24px 1fr;
+    gap: 16px;
+    line-height: 1.71;
+  }
 
-    &__svg {
-      line-height: 1.71;
-      width: initial;
-      min-width: min-content;
-      position: relative;
-      top: 5px;
+  &__links {
+    line-height: 1.93;
+    display: grid;
+    gap: 16px;
+    margin-bottom: 24px;
+  }
+
+  &__link {
+    &:hover {
+      text-decoration: underline;
     }
   }
 }
