--- a/src/scss/04-globals/_footer.scss
+++ b/src/scss/04-globals/_footer.scss
@@ -3,7 +3,7 @@
 .footer {
   color: white;
   padding: 139px 21px 46px 16px;
-    font-size: rem(14px);
+  font-size: rem(14px);
 
   &__logo {
     max-width: 167px;
@@ -34,6 +34,33 @@
   &__link {
     &:hover {
       text-decoration: underline;
+    }
+  }
+
+  &__socials {
+    max-width: 120px;
+    margin: 24px auto;
+    display: flex;
+    justify-content: space-between;
+  }
+
+  &__social {
+    width: 31px;
+    height: 31px;
+    border: solid 1px;
+    border-color: inherit;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 7px;
+
+    &--facebook {
+      padding: 10px;
+    }
+
+    &:hover {
+      color: $pink;
     }
   }
 }
