style footer socials mobile

--- a/src/scss/04-globals/_footer.scss
+++ b/src/scss/04-globals/_footer.scss
@@ -63,4 +63,10 @@
       color: $pink;
     }
   }
+
+  &__copyright {
+    text-align: center;
+    font-size: rem(11.1304px);
+    line-height: 17px;
+  }
 }
