--- a/src/scss/03-objects/_button.scss
+++ b/src/scss/03-objects/_button.scss
@@ -9,7 +9,9 @@
   font-size: rem(12px);
   line-height: rem(16px);
   width: 100%;
-  max-width: 240px;
   height: 40px;
   display: block;
+  &:hover {
+    background-color: hsla(322, 100%, 80%, 1);
+  }
 }
